# numeric-_2023-24

./: .gitignore  CMakeLists.txt  Folder.DotSettings  package-lock.cmake
cmake/module/: FindBLAS.cmake  Findblaze.cmake
src/: CMakeLists.txt  PlotUtility.hpp  ProfilingUtility.hpp
src/exercise04/: CMakeLists.txt  main.cpp
src/exercise06/: CMakeLists.txt  Linvb.hpp  main.cpp
src/exercise08/: CMakeLists.txt  main.cpp
src/exercise09/: CMakeLists.txt  main.cpp
src/exercise10/: CMakeLists.txt  main.cpp
src/exercise32/: CMakeLists.txt  main.cpp
src/exercise34/: CMakeLists.txt  main.cpp
src/exercise50/: CMakeLists.txt  main.cpp
src/include/: Bisektion.hpp  Cholesky.hpp  Definitions.hpp  Linvb.hpp  Newton.hpp  Quadratur.hpp  RegulaFalsi.hpp  Rinvb.hpp  Sekanten.hpp  compactLR.hpp  lrPivot.hpp  solveLR.hpp
